fix: add App styles, add chat z-index

--- a/client/src/components/Chat/chat.scss
+++ b/client/src/components/Chat/chat.scss
@@ -3,6 +3,7 @@
 
 .chat {
   background-color: $colorWhite;
+  z-index: 50;
 
   &__wrapper {
     height: 50vh;
