--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -31,3 +31,9 @@ img {
   width: auto;
   height: 100%;
 }
+
+#App {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
